# app/Http/Controllers/CommentController.php
@@ -8,12 +8,38 @@ use App\Comment;
 use App\User;
 use App\Article;
 
+
+/**
+ * @OA\Tag(
+ *     name="comment",
+ *     description="Operations about comment",
+ *     @OA\ExternalDocumentation(
+ *         description="Find out more about",
+ *         url="http://swagger.io"
+ *     )
+ * )
+ */
 class CommentController extends Controller
 {
     /**
-     * Display a listing of the resource.
+     * @OA\Get(
+     *      path="/comments",
+     *      operationId="getComments",
+     *      tags={"comment"},
+     *      summary="Get list of all comments",
+     *      @OA\Response(
+     *          response=200,
+     *          description="successful operation",
+     *          @OA\Schema(
+     *              type="array",
+     *              items={@OA\Schema(ref="#/components/schemas/Comment")}
+     *          )
+     *       ),
+     *       @OA\Response(response=400, description="Bad request"),
+     * )
+     * Retrieve all comments
      *
-     * @return \Illuminate\Http\Response
+     * @return Comment[]|\Illuminate\Database\Eloquent\Collection
      */
     public function index()
     {
@@ -21,10 +47,24 @@ class CommentController extends Controller
     }
 
     /**
-     * Store a newly created resource in storage.
+     * @OA\Post(
+     *     path="/comments",
+     *     tags={"comment"},
+     *     description="Create a comment",
+     *     operationId="createComment",
+     *     @OA\Response(
+     *         response=201,
+     *         description="successful operation"
+     *     ),
+     *     @OA\RequestBody(
+     *          @OA\JsonContent(ref="#/components/schemas/Comment")
+     *     ),
+     *     @OA\Response(response=400, description="Bad request")
+     * )
+     * Create comment
      *
-     * @param  \Illuminate\Http\Request  $request
-     * @return \Illuminate\Http\Response
+     * @param Request $request
+     * @return Comment|\Illuminate\Support\MessageBag
      */
     public function store(Request $request)
     {
@@ -48,7 +88,27 @@ class CommentController extends Controller
     }
 
     /**
-     * Display the specified resource.
+     * @OA\Get(
+     *      path="/comments/{id}",
+     *      operationId="getComment",
+     *      tags={"comment"},
+     *      summary="Get comment by id",
+     *      @OA\Parameter(
+     *          in="path",
+     *          name="id",
+     *          required=true,
+     *          @OA\Schema(
+     *              type="integer"
+     *          )
+     *      ),
+     *      @OA\Response(
+     *          response=200,
+     *          description="successful operation",
+     *          @OA\JsonContent(ref="#/components/schemas/Comment"),
+     *       ),
+     *       @OA\Response(response=400, description="Bad request"),
+     * )
+     * Get comment by id
      *
      * @param  int  $id
      * @return \Illuminate\Http\Response
@@ -59,7 +119,30 @@ class CommentController extends Controller
     }
 
     /**
-     * Update the specified resource in storage.
+     * @OA\Put(
+     *     path="/comments/{id}",
+     *     tags={"comment"},
+     *     summary="Update comment",
+     *     operationId="updateComments",
+     *     @OA\Parameter(
+     *          in="path",
+     *          name="id",
+     *          required=true,
+     *          @OA\Schema(
+     *              type="integer"
+     *          )
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="successful operation",
+     *          @OA\JsonContent(ref="#/components/schemas/Comment"),
+     *     ),
+     *     @OA\RequestBody(
+     *          @OA\JsonContent(ref="#/components/schemas/Comment")
+     *     ),
+     *     @OA\Response(response=400, description="Bad request"),
+     * )
+     * Update comment.
      *
      * @param  \Illuminate\Http\Request  $request
      * @param  int  $id
@@ -86,11 +169,31 @@ class CommentController extends Controller
         return $comment;
     }
 
+
     /**
-     * Remove the specified resource from storage.
+     *  @OA\Delete(
+     *      path="/comments/{id}",
+     *      operationId="deleteComment",
+     *      tags={"comment"},
+     *      summary="Delete comment",
+     *      @OA\Parameter(
+     *          in="path",
+     *          name="id",
+     *          required=true,
+     *          @OA\Schema(
+     *              type="integer"
+     *          )
+     *      ),
+     *      @OA\Response(
+     *          response=204,
+     *          description="successful operation"
+     *       ),
+     *       @OA\Response(response=400, description="Bad request"),
+     * )
+     * Remove comment
      *
-     * @param  int  $id
-     * @return \Illuminate\Http\Response
+     * @param int $id
+     * @return int
      */
     public function destroy(int $id)
     {
